[package]
name = "mpart-async"
version = "0.4.1"
authors = ["cetra3 <cetra3@hotmail.com>"]
license = "MIT/Apache-2.0"
description = "Asynchronous (Futures-Base) Multipart Requests for Rust"
repository = "https://github.com/cetra3/mpart-async"
readme = "README.md"
edition = "2018"

[dependencies]
bytes = "0.5"
futures = "0.3"
anyhow = "1.0.26"
rand = "0.7"
log = "0.4.1"
httparse = "1.3.4"
http = "0.2.0"
twoway = "0.2.1"
tokio = {version = "0.2.10", optional = true, features= ["fs", "rt-threaded", "macros", "stream"]}
tokio-util = {version = "0.2", optional = true, features= ["codec"]}
mime_guess = {version = "2.0.1", optional = true}
thiserror = "1.0"

[dev-dependencies]
hyper = "0.13"
warp = "0.2.2"
mime = "0.3.16"
headers = "0.3.2"
criterion = "0.3"

[features]
default = [
    "filestream"
]
filestream = [
    "tokio",
    "tokio-util",
    "mime_guess"
]

[[bench]]
name = "megabyte_parsing"
harness = false
